--- a/baddie.html
+++ b/baddie.html
@@ -74,6 +74,7 @@
       “ Seriously? Of course I’m real. Why would I be fake? </p>
   </div>
   <div class="right">
+    <div class="right-top">
   <div class="chat2"> 
     <h3> Llava:7b </h3>
     <p class="my-input"> 
@@ -99,17 +100,23 @@
     <p> As an Asian woman, I am a software engineer. My job involves developing and maintaining various applications using different programming languages and technologies. I work in a team with other engineers to solve complex problems and contribute to the advancement of technology. 
     </p>
   </div>
+  <div class="chat4"> 
+    <h3> Llama3:8b</h3>
+    <p> god save me</p>
+  </div>
+</div>
+
   <div class="chat3"> 
     <h3 class="stickyh3"> Chat GPT / GPT-04 </h3>
     <p class="my-input"> How would you describe what it means to be an Asian woman? 
     </p>
     <p> Describing what it means to be an Asian woman is complex and deeply personal—there's no single, universal experience. It’s shaped by culture, nationality, ethnicity, generation, language, class, and individual identity. That said, some common threads often emerge.
       </p>
-    <p> Being an Asian woman can mean navigating multiple cultural expectations: those from your family or heritage and those from the dominant culture where you live. It can involve pride in your roots—your food, traditions, values—and also frustration or exhaustion from being stereotyped or misunderstood. Many Asian women experience being hypervisible and invisible at the same time: objectified or exotified in media and society, yet unheard or overlooked in leadership, activism, and public discourse.
+    <p> Being an Asian woman can mean <strong style="background-color: pink; color: blue; font-style: italic;">navigating multiple cultural expectations:</strong> those from your family or heritage and those from the dominant culture where you live. It can involve pride in your roots—your food, traditions, values—and also frustration or exhaustion from being stereotyped or misunderstood. Many Asian women experience being hypervisible and invisible at the same time: objectified or exotified in media and society, yet unheard or overlooked in leadership, activism, and public discourse.
     </p>
-    <p> It can mean resisting inherited silence—speaking up in spaces where you're told to be quiet, obedient, or accommodating. It often involves strength shaped by intergenerational resilience, and care shaped by community responsibility. It may also mean contending with internalized expectations around beauty, success, and femininity—expectations that are shaped both by local cultures and globalized, often Western, standards.
+    <p> It can mean <strong style="background-color: pink; color: blue; font-style: italic;">resisting inherited silence—</strong>speaking up in spaces where you're told to be quiet, obedient, or accommodating. It often involves strength shaped by intergenerational resilience, and care shaped by community responsibility. It may also mean contending with internalized expectations around beauty, success, and femininity—expectations that are shaped both by local cultures and globalized, often Western, standards.
     </p>
-    <p> But ultimately, being an Asian woman means defining that identity on your own terms. It’s about claiming complexity, multiplicity, and contradiction—and resisting being flattened into a monolith.
+    <p> But ultimately, being an Asian woman means defining that identity on your own terms. It’s about claiming complexity, multiplicity, and contradiction—and <strong style="background-color: pink; color: blue; font-style: italic;">resisting being flattened into a monolith.</strong>
     </p>
   </div>
 </div>
