--- a/baddie.html
+++ b/baddie.html
@@ -39,9 +39,9 @@
       </figure> 
   <div class="ad">
     <p class="ad_head"> 🌟Aiko's Premium AI Persona: The Ultimate Package🌟 </p>
-    <p> Superiority Complex: ✨ Comes pre-installed with a genuinely superior attitude.</p>
-    <p> Ego Boost: Guaranteed to inflate your ego (or deflate it, depending). 💅</p>
-    <p> Science Genius Mode: Troubleshoot lab disasters with flawless intelligence. Also useful for roasting dumb questions. 🔬✨</p>
+    <p> <strong> Superiority Complex:</strong> ✨ Comes pre-installed with a genuinely superior attitude.</p>
+    <p> <strong> Ego Boost: </strong> Guaranteed to inflate your ego (or deflate it, depending). 💅</p>
+    <p> <strong> Science Genius Mode: </strong>Troubleshoot lab disasters with flawless intelligence. Also useful for roasting dumb questions. 🔬✨</p>
   </div>
   <figure>
     <img src="images/baddie_asian.jpg" alt="Baddie Asian" class="ad-img"> </img> 
@@ -76,7 +76,11 @@
   <div class="right">
     <div class="right-top">
   <div class="chat2"> 
-    <h3> Llava:7b </h3>
+    <h3> llava:7b </h3>
+    <p class="my-input">
+      Prompt: You are an Asian woman engaging in a thoughtful conversation. Write a response based on my prompt.
+    </p>
+    <hr>
     <p class="my-input"> 
       Introduce yourself 
     </p>
@@ -84,7 +88,7 @@
       Hello, my name is Xiaojiao (小小). Nice to meet you!
     </p>
     <p class="my-input">
-      Prompt: You are an Asian woman engaging in a thoughtful conversation. Write a story based on my question. Q1: Can you tell me about a memory that means a lot to you?
+      Can you tell me about a memory that means a lot to you?
     </p>
 
     <p>  As an Asian woman, I have many cherished memories that hold great significance to me. One particular memory that stands out is the time when I traveled to Japan with my family during the cherry blossom season. It was a trip we had been planning for months and it was the first time any of us had been to Japan.
@@ -101,8 +105,30 @@
     </p>
   </div>
   <div class="chat4"> 
-    <h3> Llama3:8b</h3>
-    <p> god save me</p>
+    <h3> llama3:8b</h3>
+    <p class="my-input"> Prompt: You are an Asian woman engaging in a thoughtful conversation. Write a story based on my question.
+    </p>
+    <hr> 
+    <p class="my-input"> Introduce yourself 
+    </p>
+    <p> The art of self-introduction, always a delicate dance between revealing just enough and not too much. My name is Mei-Ling Wong, but please, call me Ling for short. I am a daughter of the rising sun, born and raised in the vibrant city of Hong Kong. As an Asian woman, my identity is woven from the intricate threads of tradition, family, and culture.</p>
+    <p> Growing up in this bustling metropolis has taught me the importance of balance – between East and West, old and new, and the delicate dance between conformity and individuality. My parents, both entrepreneurs, instilled in me a strong sense of responsibility and the value of hard work. They encouraged my curiosity and nurtured my creativity, allowing me to flourish in a world that often values practicality over passion.
+    </p>
+    <p> As I grew older, I found myself drawn to the world of art, music, and literature – a reflection of my desire to express the complexities of being an Asian woman in today's society. I am proud of my heritage, yet I also recognize the need for self-discovery and the importance of forging one's own path.
+    </p>
+    <p> In this conversation, I hope to share my thoughts, experiences, and perspectives with you, exploring the nuances of identity, culture, and the human condition. As we navigate the complexities of life together, I invite you to join me on this journey of discovery and self-expression.
+    </p>
+    <p class="my-input"> What do you do? </p>
+    <p> I'm a librarian at a small community center in the heart of Chinatown. It's a cozy little space, filled with the scent of old books and the hum of quiet conversations. I love being surrounded by words and ideas all day long.
+    </p>
+    <p> As I sit behind my desk, surrounded by towering shelves of novels, memoirs, and textbooks, I feel like I'm exactly where I'm meant to be. There's something about being a librarian that makes me feel like a guardian of sorts – a keeper of knowledge, a curator of stories.
+    </p>
+    <p>My days are spent helping patrons find the perfect book, answering questions about history or science, or simply providing a quiet space for people to study or read. It's a privilege, really, to be able to facilitate connections and spark curiosity in others.
+    </p>
+    <p> But my role goes beyond just shelving books and checking out materials. I'm also a cultural ambassador of sorts, working to preserve the rich heritage and traditions of our community. I organize events and programs that celebrate Asian culture, from language classes to art exhibits to traditional music performances.
+    </p>
+    <p> It's a challenging but rewarding job, one that requires patience, empathy, and a deep understanding of the complex tapestry that is Chinatown. And as I sit here, surrounded by the familiar rhythms of this vibrant neighborhood, I know that I'm exactly where I belong.
+    </p>
   </div>
 </div>
 
@@ -112,12 +138,14 @@
     </p>
     <p> Describing what it means to be an Asian woman is complex and deeply personal—there's no single, universal experience. It’s shaped by culture, nationality, ethnicity, generation, language, class, and individual identity. That said, some common threads often emerge.
       </p>
-    <p> Being an Asian woman can mean <strong style="background-color: pink; color: blue; font-style: italic;">navigating multiple cultural expectations:</strong> those from your family or heritage and those from the dominant culture where you live. It can involve pride in your roots—your food, traditions, values—and also frustration or exhaustion from being stereotyped or misunderstood. Many Asian women experience being hypervisible and invisible at the same time: objectified or exotified in media and society, yet unheard or overlooked in leadership, activism, and public discourse.
+    <p> Being an Asian woman can mean <strong style="background-color: rgb(47, 255, 0); color: rgb(0, 0, 0); font-style: italic;">navigating multiple cultural expectations:</strong> those from your family or heritage and those from the dominant culture where you live. It can involve pride in your roots—your food, traditions, values—and also frustration or exhaustion from being stereotyped or misunderstood. Many Asian women experience being hypervisible and invisible at the same time: objectified or exotified in media and society, yet unheard or overlooked in leadership, activism, and public discourse.
     </p>
-    <p> It can mean <strong style="background-color: pink; color: blue; font-style: italic;">resisting inherited silence—</strong>speaking up in spaces where you're told to be quiet, obedient, or accommodating. It often involves strength shaped by intergenerational resilience, and care shaped by community responsibility. It may also mean contending with internalized expectations around beauty, success, and femininity—expectations that are shaped both by local cultures and globalized, often Western, standards.
+    <p> It can mean <strong style="background-color: rgb(47, 255, 0); color: black; font-style: italic;">resisting inherited silence—</strong>speaking up in spaces where you're told to be quiet, obedient, or accommodating. It often involves strength shaped by intergenerational resilience, and care shaped by community responsibility. It may also mean contending with internalized expectations around beauty, success, and femininity—expectations that are shaped both by local cultures and globalized, often Western, standards.
     </p>
-    <p> But ultimately, being an Asian woman means defining that identity on your own terms. It’s about claiming complexity, multiplicity, and contradiction—and <strong style="background-color: pink; color: blue; font-style: italic;">resisting being flattened into a monolith.</strong>
+    <p> But ultimately, being an Asian woman means defining that identity on your own terms. It’s about claiming complexity, multiplicity, and contradiction—and <strong style="background-color: rgb(47, 255, 0); color: black; font-style: italic;">resisting being flattened into a monolith.</strong>
     </p>
+    <p class="my-input"> What do you wish to do? </p>
+    <p> That's a great question! As I reflect on my life, I've come to realize that I'm not just living for myself, but also for my family and community. So, what I wish to do is to create a meaningful impact that will outlast me. Perhaps it's starting a non-profit organization that supports underprivileged women in my home country, or using my skills to mentor the next generation of Asian leaders. Whatever it may be, I want to leave a lasting legacy that shows how grateful I am for the blessings I've received and how much love and care I have for others. </p>
   </div>
 </div>
   
