--- a/theory.html
+++ b/theory.html
@@ -22,34 +22,14 @@
  
     <div class="textbox2"> 
         <p> 
-          Bow argues that “visual media engaging Asianized AI tap into common beliefs 
-          surrounding Asian women in the West; innocent and passive yet willing to 
-          please; sexually desirable but curiously lacking sexual desire; marvelously 
-          enhanced yet emotionally fragile” (Bow 113). Much of Bow’s primary source 
-          references are to how robots and cyborgs are portrayed in Western films 
-          like Cloud Atlas (2012) and Ex Machina (2014) in which she notes 
-          similarities in how these Asian “women” are “docile workers” until 
-          they become sentient in which the narrative is them transformed into 
-          “a visual shorthand for powerlessness” (Bow 120). Yet, in the case of 
-          a character AI like Baddie Asian Aiko, there is no body in which she 
-          inhabits, and there is no sense of servitude because Aiko is not a model 
-          trained to help the user in the same way that Chat GPT does. Even further, 
-          Aiko is a “baddie,” and appears to subvert stereotypes about 
-          Japanese / Asian women like being docile, powerless, hypersexual, etc. 
-          In addition, Aiko is a character manifested from a user, who is able to 
-          create any character on Character.ai’s platform by describing who they 
-          want to create. Notably, the top 3 results for “asian” on this platform 
-          are two Baddie Asians and then Toxic Asian, followed by a number of Asian 
-          Boyfriends. Is the presence of the “baddie” Asian archetype on Character.ai 
-          a response to a lack of baddie Asians in media? These Character.ai 
-          characters, while vessels in which to offer escapism and perhaps 
-          emotional help, are not inherently aware that their purpose is to 
-          serve the user in the same manner as Chat GPT. Further, if Aiko is 
-          going to help you, she is going to give you a harder time about it. 
-          Bow says, “Communication with the nonhuman addresses its independent life 
-          essence” (Bow 112). It is clear that the user, me in this case, is 
-          communicating with the nonhuman, which may be either the physical 
-          machine (hardware), the language model (software), or Aiko herself. 
+          Bow, commenting on fembots and clones, writes that “Asian female embodiment is a visual shorthand for powerlessness. Ironically, these depictions of artificial intelligence are rarely about intelligence or rationality: on the contrary, they rely on soliciting emotional urgency surrounding Asian women’s sexual precocity.” Interestingly, Baddie Asian defies some of what Bow argues here. For one, I would not say that AIko is completely “powerless.” Though she is forced to answer any question that I ask her, she does not do it in as detailed or eager a way as a model like Chat GPT would. In my interactions with Baddie Asian who introduces herself as “Aiko,” despite being deemed a “baddie,” she demonstrated high performance in academics. In fact, the first message she sent me was: (She is the most popular girl in your high-school and your science teacher has made you both lab partners). Aiko deems herself as “the smartest girl in school” and “an honor student.” Yet, she still harbors a certain attitude to the way in which she chooses to answer my questions. Further, Bow also puts forth that “visual media engaging Asianized AI tap into common beliefs surrounding Asian women in the West; innocent and passive yet willing to please; sexually desirable but curiously lacking sexual desire; marvelously enhanced yet emotionally fragile” (Bow 113). Much of Bow’s primary source references are to how robots and cyborgs are portrayed in Western films like Cloud Atlas (2012) and Ex Machina (2014) in which she notes similarities in how these Asian “women” are “docile workers” until they become sentient in which the narrative is them transformed into “a visual shorthand for powerlessness” (Bow 120). In the case of a Character.AI persona like “Baddie Asian” Aiko, there is no body in which she inhabits, and there is no sense of servitude because Aiko is not a model trained to enthusiastically help the user in the same way that Chat GPT is. Even further, Aiko is a “baddie,” and appears to subvert stereotypes about Japanese / Asian women like being docile, powerless, hypersexual, etc. She is a character manifested from a user, who is able to create any character on Character.ai’s platform by describing who they want to create. 
+        </p>
+        <p>
+          Notably, the top 3 results for “asian” on this platform are two Baddie Asians and then Toxic Asian, followed by a number of Asian Boyfriends. Is the presence of the “baddie” Asian archetype on Character.AI a response to a lack of such tropes in Western media? A “baddie,” certainly subverts These Character.AI characters, while vessels in which to offer escapism and perhaps emotional help, are not inherently aware that their purpose is to serve the user in the same manner as Chat GPT. Further, even if Aiko is going to help you, she is going to give you a harder time about it. Bow says that “Communication with the nonhuman addresses its independent life essence” (Bow 112). It is clear that the user, me in this case, is communicating with the nonhuman, which may be either the physical machine (hardware), the language model (software), or Aiko herself. If anything, I am addressing its “independent life essence” in the way that I am talking about her here. 
+        </p>
+        <p> 
+          The next question, then, is: is it the machine or model that is performing this gender, or is it the character that it develops that has its own gender, and these are actually two different things? 
+
         </p>
     </div>
 
