--- a/theory.html
+++ b/theory.html
@@ -20,7 +20,9 @@
             </ul>
           </nav> 
  
-    <div class="textbox2"> 
+    <div class="textbox2">
+      <h2> Enter the Chinese room: Reflections  
+      </h2> 
         <p> 
           Bow, commenting on fembots and clones, writes that “Asian female embodiment is a visual shorthand for powerlessness. Ironically, these depictions of artificial intelligence are rarely about intelligence or rationality: on the contrary, they rely on soliciting emotional urgency surrounding Asian women’s sexual precocity.” Interestingly, Baddie Asian defies some of what Bow argues here. For one, I would not say that AIko is completely “powerless.” Though she is forced to answer any question that I ask her, she does not do it in as detailed or eager a way as a model like Chat GPT would. In my interactions with Baddie Asian who introduces herself as “Aiko,” despite being deemed a “baddie,” she demonstrated high performance in academics. In fact, the first message she sent me was: (She is the most popular girl in your high-school and your science teacher has made you both lab partners). Aiko deems herself as “the smartest girl in school” and “an honor student.” Yet, she still harbors a certain attitude to the way in which she chooses to answer my questions. Further, Bow also puts forth that “visual media engaging Asianized AI tap into common beliefs surrounding Asian women in the West; innocent and passive yet willing to please; sexually desirable but curiously lacking sexual desire; marvelously enhanced yet emotionally fragile” (Bow 113). Much of Bow’s primary source references are to how robots and cyborgs are portrayed in Western films like Cloud Atlas (2012) and Ex Machina (2014) in which she notes similarities in how these Asian “women” are “docile workers” until they become sentient in which the narrative is them transformed into “a visual shorthand for powerlessness” (Bow 120). In the case of a Character.AI persona like “Baddie Asian” Aiko, there is no body in which she inhabits, and there is no sense of servitude because Aiko is not a model trained to enthusiastically help the user in the same way that Chat GPT is. Even further, Aiko is a “baddie,” and appears to subvert stereotypes about Japanese / Asian women like being docile, powerless, hypersexual, etc. She is a character manifested from a user, who is able to create any character on Character.ai’s platform by describing who they want to create. 
         </p>
@@ -32,12 +34,26 @@
 
         </p>
     </div>
+    <div class="textbox3">
+      <h2> Interlude: Chat, are we cooked? 
+      </h2>
+      <p> There is also the question if we are treating the rise of AI in a way that is reminiscent of historical and current xenophobic and Yellow Peril regimes. In “Techno-orientalism and the AI Imaginary,” Fernandez begins with the origins of Yellow Peril as a means to detail the history of anti-foreign and anti-Asian imageries. Specifically, he argues that “This absolute certainty that the relationship between the West and East could only end in all-out warfare is resonant with the reoccurring sense in AI fiction that the AIs, as a race or species of beings unto themselves, must inevitably come into conflict with humans in a war for dominance” (26). Is this the way we’re headed, in which humans must come out as the dominant because a society where robots have literally taken over can absolutely not happen? Ultimately, “AI technologies threaten the status quo and Western world powers in ways that replicate the similar fears within Orientalist discourse” (Fernandez 36). If we operate under the theory that machines are indeed Asian, could we say that this is racism and xenophobic repackaged? 
+      </p>
+    </div>
 
     <div class="soft_science_div"> 
     <figure>
       <img src="images/soft_science.jpg" alt="Soft Science cover" class="soft_science"> </img> 
       <figcaption class="fig"> <a href="https://www.amazon.com/Soft-Science-Franny-Choi/dp/1938584996">Image source</a> </figcaption>
       </figure>
+      <div class="textbox4"> 
+        <p> Primary Source </p>
+        <p> 
+          The most relevant primary source my work could be put into conversation with is Franny Choi’s Soft Science. In “Making Of,” Choi writes that “When a cyborg puts on a dress, / it’s called drag. // When a cyborg gets down / on her knees, it’s called // behavior” (11). This opening line relates directly to the goals I have for my project in questioning how gender is constructed or deconstructed with respect to humans and the non-human. Surely, drag, which is another form of gender performance, Choi clarifies that when she “say[s] cyborg, / I mean what man made,” which is relevant to this current conversation on what really makes a cyborg. Connecting this to current fear surrounding the rise of new technologies such as AI, Choi reminds us that these things are all ultimately man-made. 
+
+        </p>
+      </div>
+      
     </div>
     
     </body>
