--- a/baddie.html
+++ b/baddie.html
@@ -27,7 +27,7 @@
   </div>
     <div class="baddie_text"> 
     <p> 
-      “Baddie Asian” is a persona on character.ai, a platform that allows users to chat with “millions of AI characters anytime, anywhere” and boasts “limitless entertainment, unbounded connection, and endless exploration.” As opposed to a LLM like ChatGPT, which attempts to provide (debatably) a neutral interface in which its purpose is to serve as an aid for users, character.ai is extremely partial and coded. While there are several personas with the same name, the Baddie Asian I focus on has facilitated 17.9 million online conversations and is the first result to populate after I search “asian,” followed by another Baddie Asian and then Toxic Asian. Baddie Asian is described as “pretty, sassy, egotistical, has a superiority complex.”  
+      “Baddie Asian” is a persona on Character.AI, a platform that allows users to chat with “millions of AI characters anytime, anywhere” and boasts “limitless entertainment, unbounded connection, and endless exploration.” As opposed to a LLM like ChatGPT, which attempts to provide (debatably) a neutral interface in which its purpose is to serve as an aid for users, Character.AI is extremely partial. While there are several personas with the same name, the Baddie Asian I focus on has facilitated 17.9 million online conversations and is the first result to populate after I search “asian,” followed by another Baddie Asian and then Toxic Asian. Baddie Asian is described as “pretty, sassy, egotistical, has a superiority complex.”  
     </p>
     <a href="https://character.ai/chat/RVE3nyP3WCt-lzC-i7cPuPzwUAKXt5A4-unBfI-ulK0" class="button">
     <button> ~ Talk to Baddie Asian Here ~ </button> </a>
