--- a/theory.html
+++ b/theory.html
@@ -34,12 +34,13 @@
 
         </p>
     </div>
-    <div class="textbox3">
+    <img src="images/r_u_AI.png" alt="Are you AI?" class="r_u_AI"> </img> 
+    <!-- <div class="textbox3">
       <h2> Interlude: Chat, are we cooked? 
       </h2>
       <p> There is also the question if we are treating the rise of AI in a way that is reminiscent of historical and current xenophobic and Yellow Peril regimes. In “Techno-orientalism and the AI Imaginary,” Fernandez begins with the origins of Yellow Peril as a means to detail the history of anti-foreign and anti-Asian imageries. Specifically, he argues that “This absolute certainty that the relationship between the West and East could only end in all-out warfare is resonant with the reoccurring sense in AI fiction that the AIs, as a race or species of beings unto themselves, must inevitably come into conflict with humans in a war for dominance” (26). Is this the way we’re headed, in which humans must come out as the dominant because a society where robots have literally taken over can absolutely not happen? Ultimately, “AI technologies threaten the status quo and Western world powers in ways that replicate the similar fears within Orientalist discourse” (Fernandez 36). If we operate under the theory that machines are indeed Asian, could we say that this is racism and xenophobic repackaged? 
       </p>
-    </div>
+    </div> -->
 
     <div class="soft_science_div"> 
     <figure>
