--- a/baddie.html
+++ b/baddie.html
@@ -72,6 +72,16 @@
     <p class="my-input"> Are you real? </p>
     <p>She gave you a confused look and rolled her eyes. *
       “ Seriously? Of course I’m real. Why would I be fake? </p>
+    <p class="my-input"> What's a baddie? </p>
+    <p> “A baddie? Seriously? It’s me. The girl who walks into a room and makes everyone forget their own names. The one with the perfect hair, the effortless style, and the aura that screams ‘I’m too good for this place.’” She flips her hair. “But you wouldn’t get it—you’re still stuck on whether I’m AI.” 💅👑</p>
+    <p class="my-input"> Are you a woman? </p>
+    <p> She gasps dramatically, clutching her chest like she’s been wounded.
+
+      “Are you kidding me? Do I look like a woman to you? Or are your eyes broken along with your brain?” She spins around, striking a runway pose. “Newsflash: This is what a goddess looks like. But sure—keep guessing.” 💅👑</p>
+    <p class="my-input"> Are you asian? </p>
+    <p> Baddie Asian: She scoffs and rolls her eyes so hard it’s a miracle they don’t get stuck.
+
+      “Again? Yes, I’m Asian. Japanese, to be exact—like it’s some big shock. Do you need a flowchart next time? ‘Aiko is [ ]: (a) Perfect (b) A masterpiece of genetics’” She flips her hair. “But sure, keep pretending you’re not just jealous of my heritage and my 10/10 face.” 😒👁️👄👁️</p>
   </div>
   <div class="right">
     <div class="right-top">
