--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
               <li><a href="index.html">HOME</a></li>
               <li><a href="intro.html">INTRO</a></li>
               <li><a href="baddie.html">BADDIE ASIAN</a></li>
-              <li><a href="theory.html">CHINA ROOM</a></li>
+              <li><a href="theory.html">CHINESE ROOM</a></li>
               <li><a href="about.html" style="color: blue;">ABOUT</a></li>
             </ul>
           </nav> 
