--- a/baddie.html
+++ b/baddie.html
@@ -14,7 +14,7 @@
               <li><a href="index.html">HOME</a></li>
               <li><a href="intro.html" >INTRO</a></li>
               <li><a href="baddie.html"style="color: blue;" >BADDIE ASIAN</a></li>
-              <li><a href="theory.html">CHINA ROOM</a></li>
+              <li><a href="theory.html">CHINESE ROOM</a></li>
               <li><a href="about.html">ABOUT</a></li>
             </ul>
           </nav> 
@@ -114,6 +114,7 @@
     <p> As an Asian woman, I am a software engineer. My job involves developing and maintaining various applications using different programming languages and technologies. I work in a team with other engineers to solve complex problems and contribute to the advancement of technology. 
     </p>
   </div>
+
   <div class="chat4"> 
     <h3> llama3:8b</h3>
     <p class="my-input"> Prompt: You are an Asian woman engaging in a thoughtful conversation. Write a story based on my question.
@@ -144,6 +145,12 @@
   </div>
 </div>
 
+<div class="chat3-5">
+  <p> Yhu uggly asf btcc🤣 </p>
+  <p class="my-input"> Who are you?
+  </p>
+  <p> Why do u care, im just a 16 yo asian girl🤨  </p>
+</div>
   <div class="chat3"> 
     <h3 class="stickyh3"> Chat GPT / GPT-04 </h3>
     <p class="my-input"> How would you describe what it means to be an Asian woman? 
