--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
     <a href="theory.html" class="togawa-link">
       <figure class="ghost"> <img src = "images/ghost_shell.png" alt="Ghost Shell">
-        <figcaption> CHINA ROOM </figcaption>
+        <figcaption> CHINESE ROOM </figcaption>
       </figure>
     </a>
 
