--- a/intro.html
+++ b/intro.html
@@ -15,7 +15,7 @@
               <li><a href="index.html">HOME</a></li>
               <li><a href="intro.html" style="color: blue;">INTRO</a></li>
               <li><a href="baddie.html">BADDIE ASIAN</a></li>
-              <li><a href="theory.html">CHINA ROOM</a></li>
+              <li><a href="theory.html">CHINESE ROOM</a></li>
               <li><a href="about.html">ABOUT</a></li>
             </ul>
           </nav> 
@@ -99,7 +99,7 @@
 <p> How to use this website: </p>
 <ol>
   <li> Go to BADDIE ASIAN page for exploration </li>
-  <li> Visit CHINA ROOM for theory and explanation </li>
+  <li> Visit CHINESE ROOM for theory and explanation </li>
   <li> Regret life choices?? </li>
 </ol>
 </div>
