--- a/theory.html
+++ b/theory.html
@@ -15,7 +15,7 @@
               <li><a href="index.html" >HOME</a></li>
               <li><a href="intro.html" >INTRO</a></li>
               <li><a href="baddie.html" >BADDIE ASIAN</a></li>
-              <li><a href="theory.html" style="color: blue;">CHINA ROOM</a></li>
+              <li><a href="theory.html" style="color: blue;">CHINESE ROOM</a></li>
               <li><a href="about.html" >ABOUT</a></li>
             </ul>
           </nav> 
