--- a/about.html
+++ b/about.html
@@ -33,8 +33,7 @@
     <p>
         I was inspired by several internet & digital media artists as well as numerous sources. My work is guided by
         current movements such as web brutalism, HTML zines, and general trends to create simple, HTML-driven websites
-        that do not conform to current corporate UI/UX trends. Ultimately, the internet should be a fun place that is not 
-        overrun by large corporations. There are no rules as to what websites should look like or who they should serve.
+        that do not conform to certain mainstream or corporate UI/UX trends. Below are some sources that have inspired me:
     </p>
     <ul>
         <li> ✦ <a href="https://coolguy.website/basic-html-competency-is-the-new-punk-folk-explosion/"> 
@@ -43,17 +42,17 @@
         <li> ✦ <a href="http://idyrself.com/"> Identify Yourself </a></li>
         <li> ✦ <a href="https://www.cyberfeminismindex.com/">Cyberfeminism index</a> </li>
     </ul>
-    <p> Broader sources can be found my are.na page.</p>
+    <p> More sources as well as other stuff I'm interested in can be found my <a href="https://www.are.na/eirian-huang/channels"> are.na</a> page.</p>
   
     <h4> Important links! </h4>
     <ul>
-    <li>✦ Report in PDF form (including my works cited) </li>
+    <li>✦ Read all of the content on this website including my works cited in one place! </li>
     </ul>
 
-    <figure>
+    <!-- <figure>
       <img src="images/gender_bender.png" alt="Gender bender robot"> </img> 
       <figcaption class="fig"> <a href="https://pechblenda.hotglue.me/?transhackfeminismo">Image source</a> </figcaption>
-      </figure>
+      </figure> -->
 </div>
     </body>
 
