--- a/intro.html
+++ b/intro.html
@@ -27,38 +27,36 @@
     <figcaption class="fig"> <a href="https://tenor.com/view/sonoya-mizuno-ex-machina-gif-11074803">Gif source</a> </figcaption>
   </figure>
 
+  <img src = "images/recaptcha.gif" alt="Recaptcha" class="machina2"> </img>
+    <figcaption class="fig"> <a href="https://tenor.com/view/sonoya-mizuno-ex-machina-gif-11074803">Gif source</a> </figcaption>
+  </figure>
+
     <figure> <img src = "images/haraway.png" alt="Ex Machina" class="haraway"> </img>
       <figcaption class="fig"> <a href="https://theanarchistlibrary.org/library/donna-haraway-a-cyborg-manifesto">Image source</a> </figcaption>
     </figure>
   </div>
     <div class="textbox"> 
     <p class="quote"> Communication with the nonhuman addresses its independent life essence; 
-      interaction with things is experienced as a social relationship where the goal 
-      is not control or mastery but attachment. Or to use a stronger word, love. - Bow 112 
+      interaction with things is experienced as a social relationship where the goal is not control 
+      or mastery but attachment. Or to use a stronger word, love. (Bow 112).
+
     </p>
     <p> 
-      I first became interested in the intersection between machines, humans, gender, and race following discussions
-      on how the Asian female occupies a specific positionality within the context of the line between human and machine,
-       techno-orientalism, and Haraway’s frameworks on the cyborg. In addition, based on Butler’s definition of gender
-      performativity, I wondered what the difference was between a machine performing gender and an Asian woman, 
-      who may not even be fully “human” to begin with, performing gender. 
+      I first became interested in the intersection between machines, humans, gender, and race following discussions on how the Asian female occupies a specific positionality within the context of the line between human and machine, techno-orientalism, and Haraway’s frameworks on the cyborg. In addition, based on Butler’s definition of gender performativity, I wondered what the difference was between a machine performing gender and an Asian woman, who may not even be fully “human” to begin with, performing gender. In fact, my questions are not completely baseless. In Leslie Bow’s article, she briefly touches upon Butler’s theory on “gender as an approximated performance situating the meat body as ‘syntactically regulated phantasm’” while providing examples for philosophers who work at the “line between simulation and the real” (117). Thus, these ideas formed the basis for my project. 
     </p>
     <p> 
-      Much of humanities scholarship surrounding the topics of AI, 
-      techno-orientalism, cyberfeminism, etc. lay in how, for example, 
-      Asian women are depicted in Western film and other forms of literature. 
-      On the other hand, most of the research or STEM-based scholarship surrounding 
-      the topics of AI and gender revolve around how biases are coded into models 
-      due to the datasets they are trained on being already biased, one of the 
-      most notable being the 2018 study and project “Gender Shades” 
-      by Joy Buolamwini. However, there is a certain tension between how the 
-      humanities treat AI and how STEM treats AI. This became especially 
-      apparent for me this semester where I took a class titled 
-      “AI and Storytelling,” where my (visiting) professor assigned us assignments 
-      in which we were required to test various prompts in order to generate stories,
-       then measure how good certain models were at doing so (amongst a slew of 
-       other related projects and assignments). 
-       Most interestingly was the course’s AI Policy: </p>
+      Much of humanities scholarship surrounding the topics of AI, techno-orientalism, cyberfeminism, etc. 
+      lay in the tropes that Western mass media cast onto Asian women. For example, Bow explores how “scripted 
+      dramas…exemplify the techno-Orientalist neoslave narrative” where “sentience turns out to be a red herring” (118).
+       On the other hand, most of the research or STEM-based scholarship surrounding the topics of AI and gender 
+       revolve around how human errors and bias are coded into models due to the datasets they are trained on being 
+       naturally biased. One of the most notable instances of this is the 2018 study and project 
+       <a href="http://gendershades.org/">“Gender Shades”</a> by Joy Buolamwini. However, there is a certain tension between how the humanities treat 
+       AI and how STEM treats AI. This became especially apparent for me this semester where I took a class titled 
+       “AI and Storytelling,” where my (visiting) professor assigned us assignments in which we were required to 
+       test various prompts in order to generate stories, then measure how good certain models were at doing so 
+       (amongst a slew of other related projects and assignments). Most interestingly was the course’s AI Policy: 
+ </p>
 <p class="block"> This class is about how to use AI critically to understand the world better and foster your own creativity and critical thinking. Therefore, it is an "ALL AI" policy, meaning you may use AI for any assignment to whatever extent you wish to submit the best possible assignment. </p>
 <p> While this is certainly an extreme, in my information science classes, 
   this was becoming more of the norm. I was encouraged in another class to 
@@ -69,17 +67,25 @@
   these two polarized perspectives on the either bleak or promising future of AI. 
 </p>
 
-<p> This project is not so much as focused on the AI’s ethics or morals, 
-  but rather the ways in which humans and AI are interacting despite current 
-  contentions. Prior to the widespread usage of generative AI 
-  (otherwise called the AI boom), voice assistants like Siri and Alexa are likely 
-  what most people were familiar with when it comes to artificial intelligence. 
-  While these programs are different from modes like Chat GPT, they serve as an 
-  important introduction to how there is an inexplicable link between gender and machines. Besides the somewhat obvious observation that if someone were to create a character for a tool that is solely meant to serve humans as efficiently as possible it would obviously be a woman, there is also the without can manifest itself in the form of violence against things that are gendered as women. 
-</p>
-
-<p> 
-  Bow defines techno-orientalism as “tech feeling as anti-Asian bias” (Bow 111). Techno-orientalism can be defined as “the projection of an Asianized, simulated future coincident with Japanese innovations in electronics, automobiles, gaming, AI and robotics in the 1980s” and has “come to refer to a futurist aesthetic, cyberpunk or otherwise” (Bow 111). Through an interactive statically coded webpage, I aim to explore how various LLMs are able to perform gender. Are there inherencies that these models latch on to? Is the rapid advancement of AI allowing machines and humans to converge in the way that we are sharing knowledge, or is AI diverging from human bounds of knowledge and abilities? Further, by casting my work into a simply coded static website done completely with HTML/CSS,  (or webzine, another objective I have is to force an interaction between the user (human) and the machine (my work). This medium, which could also be categorized as a digital zine or an interactive essay, blends technology with the humanities in a non-trivial, interactive, and non-corporatized way. 
+<p> This project is not so much as focused on the AI’s ethics or morals, but rather the ways in which humans and AI 
+  are interacting despite current contentions. Prior to the widespread usage of generative AI 
+  (otherwise called the AI boom), voice assistants like Siri and Alexa are likely what most people 
+  were familiar with when it comes to artificial intelligence. While these programs are different 
+  from modes like Chat GPT, they serve as an important introduction to how there is an inexplicable 
+  link between gender and machines; why are all of these voice assistants clearly gendered as woman 
+  instead of a man or an it? In this same thread, a simple definition of techno-orientalism is 
+  “tech feeling as anti-Asian bias” and “racial feeling surrounding technology” (Bow 111). 
+  Techno-orientalism can also be defined as “the projection of an Asianized, simulated future coincident with 
+  Japanese innovations in electronics, automobiles, gaming, AI and robotics in the 1980s” and has 
+  “come to refer to a futurist aesthetic, cyberpunk or otherwise” (Bow 111). Using these frameworks and 
+  through a static webpage, I aim to explore how various large language models (LLMs) are able to perform
+   gender by presenting the viewer with various interactions I have with these LLMs. Is the rapid advancement 
+   of AI allowing machines and humans to converge in the way that we are sharing knowledge, or is AI diverging 
+   from human bounds of knowledge and abilities? Further, by casting my work into a simply coded static website 
+   done completely with HTML/CSS,  (or webzine, another objective I have is to force an interaction between the 
+   user (human) and the machine (my work) that may not feel as natural as what users are used to. 
+   This medium, which could also be categorized as a digital zine or an interactive essay, blends 
+   technology with the humanities in a non-trivial, interactive, and non-corporatized way. 
 </p>
 
 <p> Ultimately, my hope is that users are inspired to reflect on their relationship with AI, interact with AI in different ways, or at least develop a more nuanced perspective of it. While there are conflicting viewpoints on the sanctity of AI, especially when it comes to bias, ethics, environmental concerns, big tech, and more, I hope that my work can contribute to current dialogues on how humans and machines interact with one another. 
