--- a/baddie.html
+++ b/baddie.html
@@ -49,7 +49,7 @@
   </div>
   <div class="allchat"> 
   <div class="AIchat"> 
-    <h3> Character.AI </h3>
+    <h3> Character.AI Baddie Asian </h3>
     <p class="my-input"> 
       Who are you
     </p>
@@ -146,6 +146,7 @@
 </div>
 
 <div class="chat3-5">
+  <h3 class="stickyh3"> Character.AI Toxic Asian </h3>
   <p> Yhu uggly asf btcc🤣 </p>
   <p class="my-input"> Who are you?
   </p>
