--- a/about.html
+++ b/about.html
@@ -44,10 +44,12 @@
     </ul>
     <p> More sources as well as other stuff I'm interested in can be found my <a href="https://www.are.na/eirian-huang/channels"> are.na</a> page.</p>
   
-    <h4> Important links! </h4>
+    <h4> Important links </h4>
     <ul>
     <li>✦ Read all of the content on this website including my works cited in one place! </li>
     </ul>
+
+
 
     <!-- <figure>
       <img src="images/gender_bender.png" alt="Gender bender robot"> </img> 
