--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
   
     <h4> Important links </h4>
     <ul>
-    <li>✦ Read all of the content on this website including my works cited in one place! </li>
+    <li>✦ <a href="https://drive.google.com/file/d/1Y4JKPUotRz0iP0IJmjTaIztf3dtvAk1R/view?usp=sharing"> Read all of the content on this website </a> including my works cited in one place! </li>
     </ul>
 
 
